--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/db": "^0.14.0",
     "@astrojs/mdx": "^3.1.5",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/vue": "^4.5.0",
+    "@types/canvas-confetti": "^1.6.4",
     "astro": "^4.15.1",
-    "typescript": "^5.5.4"
+    "canvas-confetti": "^1.9.3",
+    "lodash.debounce": "^4.0.8",
+    "typescript": "^5.5.4",
+    "vue": "^3.5.3"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9"
   }
 }
